--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>inbox</ion-title>
+    <ion-title>Inbox</ion-title>
   </ion-toolbar>
 </ion-header>
 
