Add task model and task service

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -221,12 +221,13 @@
 
     --ion-item-background: #1e1e1e;
 
-    --ion-toolbar-background: #1f1f1f;
 
     --ion-tab-bar-background: #1f1f1f;
+    --ion-toolbar-background: var(--ion-color-primary);
   }
 
   ion-title.title-large {
     --color: white;
   }
+
 }
