--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -1,19 +1,44 @@
-<ion-header>
+
+  <ion-header>
+
   <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
     <ion-title>Inbox</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button routerLink="../tasks/new-task">
+        <ion-icon name="add" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
+
 
 <ion-content>
   <ion-grid>
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
-       <ion-card>
-         <ion-title>It works</ion-title>
-       </ion-card>
+
+         <ion-grid>
+           <ion-row>
+             <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+               <ion-card *ngFor="let loadedTasks of loadedTasks">
+                 <ion-card-header>
+                   <ion-card-title>{{loadedTasks.title}}</ion-card-title>
+                   <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
+                 </ion-card-header>
+               </ion-card>
+             </ion-col>
+           </ion-row>
+         </ion-grid>
+
       </ion-col>
     </ion-row>
   </ion-grid>
 
 
 </ion-content>
+
+<ion-router-outlet id="main"></ion-router-outlet>
