Add main inbox view

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,9 +16,9 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item lines="none" routerLink="/tasks">
+          <ion-item lines="none" routerLink="/projects">
             <ion-icon name="checkbox-outline" slot="start"></ion-icon>
-            <ion-label>Tasks</ion-label>
+            <ion-label>Projects</ion-label>
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
