--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -25,10 +25,24 @@
            <ion-row>
              <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
                <ion-card *ngFor="let loadedTasks of loadedTasks">
-                 <ion-card-header>
-                   <ion-card-title>{{loadedTasks.title}}</ion-card-title>
-                   <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
-                 </ion-card-header>
+                 <ion-row>
+                   <ion-col size="9" align="left">
+                     <ion-card-header>
+                       <ion-card-title>{{loadedTasks.title}}</ion-card-title>
+                       <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
+                     </ion-card-header>
+                   </ion-col>
+                   <ion-col size="2" align="right">
+
+                     <ion-button>
+                       <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+                     </ion-button>
+                     <ion-button color="danger">
+                       <ion-icon  name="trash-outline" slot="icon-only"></ion-icon>
+                     </ion-button>
+                   </ion-col>
+                 </ion-row>
+
                </ion-card>
              </ion-col>
            </ion-row>
