--- a/src/app/tasks/new-task/new-task.page.html
+++ b/src/app/tasks/new-task/new-task.page.html
@@ -1,9 +1,73 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>new-task</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>New Offer</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button>
+              <!--(click)="onCreateOffer()"-->
+              <!--[disabled]="!form.valid || !form.get('image').value"-->
+
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-<p>text</p>
+  <form>
+    <ion-grid>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Title</ion-label>
+            <ion-input
+              type="text"
+              autocomplete
+              autocorrect
+
+              >
+            </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Description</ion-label>
+            <ion-input
+              type="text"
+              autocomplete
+              autocorrect
+
+              >
+            </ion-input>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="3" offset-sm="3">
+          <ion-item>
+            <ion-label position="floating">Set date</ion-label>
+            <ion-datetime
+                    min="2019-01-01"
+                    max="2025-12-31"
+
+            ></ion-datetime>
+          </ion-item>
+        </ion-col>
+        <ion-col size-sm="3">
+          <ion-item>
+            <ion-label position="floating">Set Time</ion-label>
+            <ion-datetime
+                    display-format="h:mm A"
+                    picker-format="h:mm A"
+
+            ></ion-datetime>
+          </ion-item>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </form>
 </ion-content>
