--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -24,7 +24,11 @@
          <ion-grid>
            <ion-row>
              <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-               <ion-card *ngFor="let loadedTasks of loadedTasks" (click)="onCardClick($event)">
+               <ion-card *ngFor="let loadedTasks of loadedTasks" [routerLink]="[
+                '/',
+                'inbox',
+                loadedTasks.id
+              ]">
                  <ion-row>
                    <ion-col size="9" align="left">
                      <ion-card-header>
@@ -34,11 +38,7 @@
                    </ion-col>
                    <ion-col size="2" align="right">
 
-                     <ion-button [routerLink]="[
-                '/',
-                'inbox',
-                loadedTasks.id
-              ]">
+                     <ion-button >
                        <ion-icon name="create-outline" slot="icon-only"></ion-icon>
                      </ion-button>
                      <ion-button color="danger">
