Customize search bar

--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -18,6 +18,11 @@
 
 <ion-content>
   <ion-grid>
+    <ion-row no-padding>
+      <ion-col class="no-padding">
+        <ion-searchbar color="light" ></ion-searchbar>
+      </ion-col>
+    </ion-row>
     <ion-row>
       <ion-col size-sm="6" offset-sm="3">
 
