--- a/src/app/tasks/new-task/new-task.page.html
+++ b/src/app/tasks/new-task/new-task.page.html
@@ -5,10 +5,9 @@
     </ion-buttons>
     <ion-title>New Offer</ion-title>
     <ion-buttons slot="primary">
-      <ion-button>
-              <!--(click)="onCreateOffer()"-->
-              <!--[disabled]="!form.valid || !form.get('image').value"-->
-
+      <ion-button
+              (click)="onCreateOffer()"
+>
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
@@ -16,7 +15,7 @@
 </ion-header>
 
 <ion-content>
-  <form>
+  <form [formGroup]="form">
     <ion-grid>
       <ion-row>
         <ion-col size-sm="6" offset-sm="3">
@@ -24,10 +23,11 @@
             <ion-label position="floating">Title</ion-label>
             <ion-input
               type="text"
+              value=""
               autocomplete
               autocorrect
+              formControlName="title">
 
-              >
             </ion-input>
           </ion-item>
         </ion-col>
@@ -38,9 +38,10 @@
             <ion-label position="floating">Description</ion-label>
             <ion-input
               type="text"
+              value=""
               autocomplete
               autocorrect
-
+              formControlName="description"
               >
             </ion-input>
           </ion-item>
@@ -53,8 +54,8 @@
             <ion-datetime
                     min="2019-01-01"
                     max="2025-12-31"
-
-            ></ion-datetime>
+                    formControlName="setDueDate">
+            </ion-datetime>
           </ion-item>
         </ion-col>
         <ion-col size-sm="3">
@@ -63,8 +64,8 @@
             <ion-datetime
                     display-format="h:mm A"
                     picker-format="h:mm A"
-
-            ></ion-datetime>
+                    formControlName="setDueTime">
+            </ion-datetime>
           </ion-item>
         </ion-col>
       </ion-row>
