Display more information about the task

--- a/src/app/inbox/task-detail/task-detail.page.html
+++ b/src/app/inbox/task-detail/task-detail.page.html
@@ -17,8 +17,11 @@
         </ion-card-header>
         <ion-card-content>
           <p> <b>Due date:</b> {{task.dueDate.toDateString()}} </p>
+          <p> <b>Due Time:</b> {{task.dueTime}} </p>
+          <p> <b>Created at:</b> {{task.createdAt.toDateString()}} </p>
           <p> <b>Status:</b> {{task.status}} </p>
           <p><b>Assigned to the project: </b>{{task.assigned}} </p>
+
         </ion-card-content>
       </ion-card>
     </ion-col>
