Add Http import to app.module.ts

--- a/src/app/inbox/task-detail/task-detail.page.html
+++ b/src/app/inbox/task-detail/task-detail.page.html
@@ -16,9 +16,9 @@
           <ion-card-title>{{task.description}}</ion-card-title>
         </ion-card-header>
         <ion-card-content>
-          <p> <b>Due date:</b> {{task.dueDate.toDateString()}} </p>
+          <p> <b>Due date:</b> {{task.dueDate}} </p>
           <p> <b>Due Time:</b> {{task.dueTime}} </p>
-          <p> <b>Created at:</b> {{task.createdAt.toDateString()}} </p>
+          <p> <b>Created at:</b> {{task.createdAt}} </p>
           <p> <b>Status:</b> {{task.status}} </p>
           <p><b>Assigned to the project: </b>{{task.assigned}} </p>
 
