--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -38,7 +38,7 @@
                    <ion-col size="9" align="left">
                      <ion-card-header>
                        <ion-card-title>{{loadedTasks.title}}</ion-card-title>
-                       <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
+                       <ion-card-subtitle>Due Date: {{loadedTasks.dueDate}}</ion-card-subtitle>
                      </ion-card-header>
                    </ion-col>
                    <ion-col size="2" align="right">
