Fetch tasks on enter inbox

--- a/src/app/tasks/new-task/new-task.page.html
+++ b/src/app/tasks/new-task/new-task.page.html
@@ -52,6 +52,7 @@
           <ion-item>
             <ion-label position="floating">Set date</ion-label>
             <ion-datetime
+                    displayFormat="MM/DD/YYYY"
                     min="2019-01-01"
                     max="2025-12-31"
                     formControlName="setDueDate">
