--- a/src/app/inbox/inbox.page.scss
+++ b/src/app/inbox/inbox.page.scss
@@ -8,3 +8,12 @@ ion-card {
 .no-padding {
   padding: 0px !important;
 }
+
+ion-searchbar{
+  padding: 0!important;
+
+}
+
+ion-grid{
+  padding: 0;
+}
