--- a/src/app/due/due.page.html
+++ b/src/app/due/due.page.html
@@ -1,6 +1,14 @@
+
 <ion-header>
+
   <ion-toolbar>
-    <ion-title>due</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Tasks Due</ion-title>
+    <ion-buttons slot="primary">
+
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
