Add completed tasks page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,9 +22,9 @@
           </ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle>
-          <ion-item lines="none" (click)="onLogout()" button>
+          <ion-item lines="none"  routerLink="/completed">
             <ion-icon name="exit" slot="start"></ion-icon>
-            <ion-label>Log out</ion-label>
+            <ion-label>Completed</ion-label>
           </ion-item>
         </ion-menu-toggle>
 
