--- a/src/app/completed/completed.page.html
+++ b/src/app/completed/completed.page.html
@@ -1,6 +1,12 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>completed</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Completed</ion-title>
+    <ion-buttons slot="primary">
+
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
