--- a/src/app/due/due.page.html
+++ b/src/app/due/due.page.html
@@ -13,5 +13,44 @@
 </ion-header>
 
 <ion-content>
+  <ion-grid>
+    <ion-row>
+      <ion-col size-sm="6" offset-sm="3">
+
+        <ion-grid>
+          <ion-row>
+            <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+              <ion-card *ngFor="let loadedTasks of filteredTasks" [routerLink]="[
+                '/',
+                'inbox',
+                loadedTasks.id
+              ]">
+                <ion-row>
+                  <ion-col size="9" align="left">
+                    <ion-card-header>
+                      <ion-card-title>{{loadedTasks.title}}</ion-card-title>
+                      <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
+                    </ion-card-header>
+                  </ion-col>
+                  <ion-col size="2" align="right">
+
+                    <ion-button >
+                      <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+                    </ion-button>
+                    <ion-button color="danger">
+                      <ion-icon  name="trash-outline" slot="icon-only"></ion-icon>
+                    </ion-button>
+                  </ion-col>
+                </ion-row>
+
+              </ion-card>
+            </ion-col>
+          </ion-row>
+        </ion-grid>
+
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 
 </ion-content>
