--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -29,13 +29,13 @@
          <ion-grid>
            <ion-row>
              <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-               <ion-card *ngFor="let loadedTasks of loadedTasks" [routerLink]="[
+               <ion-card *ngFor="let loadedTasks of loadedTasks">
+                 <ion-row>
+                   <ion-col size="9" align="left" [routerLink]="[
                 '/',
                 'inbox',
                 loadedTasks.id
               ]">
-                 <ion-row>
-                   <ion-col size="9" align="left">
                      <ion-card-header>
                        <ion-card-title>{{loadedTasks.title}}</ion-card-title>
                        <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
@@ -46,8 +46,8 @@
                      <ion-button >
                        <ion-icon name="create-outline" slot="icon-only"></ion-icon>
                      </ion-button>
-                     <ion-button color="danger">
-                       <ion-icon  name="trash-outline" slot="icon-only"></ion-icon>
+                     <ion-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
+                       <ion-icon   name="trash-outline" slot="icon-only"></ion-icon>
                      </ion-button>
                    </ion-col>
                  </ion-row>
@@ -55,6 +55,7 @@
                </ion-card>
              </ion-col>
            </ion-row>
+
          </ion-grid>
 
       </ion-col>
