--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -21,6 +21,9 @@
     <ion-row no-padding>
       <ion-col class="no-padding">
         <ion-searchbar color="light" ></ion-searchbar>
+        <div *ngIf="isLoading" class="ion-text-center">
+          <ion-spinner color="primary"></ion-spinner>
+        </div>
       </ion-col>
     </ion-row>
     <ion-row>
@@ -30,6 +33,7 @@
            <ion-row>
              <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
                <ion-card *ngFor="let loadedTasks of loadedTasks">
+
                  <ion-row>
                    <ion-col size="9" align="left" [routerLink]="[
                 '/',
