--- a/src/app/inbox/task-detail/task-detail.page.html
+++ b/src/app/inbox/task-detail/task-detail.page.html
@@ -30,7 +30,7 @@
         </ion-item>
         <ion-item>
           <ion-label position="floating">Assigned:</ion-label>
-          <ion-input readonly="" value="{{task.assigned}}"></ion-input>
+          <ion-input readonly="" value="{{task.completed}}"></ion-input>
         </ion-item>
       </ion-card>
     </ion-col>
