--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -47,8 +47,8 @@
                    </ion-col>
                    <ion-col size="2" align="right">
 
-                     <ion-button >
-                       <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+                     <ion-button (click)="onEdit(loadedTasks.id)">
+                       <ion-icon  name="create-outline" slot="icon-only"></ion-icon>
                      </ion-button>
                      <ion-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
                        <ion-icon   name="trash-outline" slot="icon-only"></ion-icon>
