Add the status value

--- a/src/app/inbox/task-detail/task-detail.page.html
+++ b/src/app/inbox/task-detail/task-detail.page.html
@@ -29,7 +29,7 @@
           <ion-input readonly="" value="{{task.status}}"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Assigned:</ion-label>
+          <ion-label position="floating">Completed:</ion-label>
           <ion-input readonly="" value="{{task.completed}}"></ion-input>
         </ion-item>
       </ion-card>
