--- a/src/app/tasks/edit-task/edit-task.page.html
+++ b/src/app/tasks/edit-task/edit-task.page.html
@@ -1,6 +1,16 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>edit-task</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Edit Task</ion-title>
+    <ion-buttons slot="primary">
+      <ion-button
+
+      >
+        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
@@ -38,6 +48,21 @@
       >
         <ion-col size-sm="6" offset-sm="3">
           <p>Description must be between 1 and 180 characters.</p>
+        </ion-col>
+      </ion-row>
+      <ion-row>
+        <ion-col size-sm="6" offset-sm="3" class="no-padding">
+
+          <ion-list-header>Completed: </ion-list-header>
+          <ion-segment formControlName="completed" [value]="form.value.completed? 'yes' : 'no'">
+            <ion-segment-button  value="yes">
+              <ion-label>Yes</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="no">
+              <ion-label>No</ion-label>
+            </ion-segment-button>
+          </ion-segment>
+
         </ion-col>
       </ion-row>
     </ion-grid>
