--- a/src/app/tasks/edit-task/edit-task.page.html
+++ b/src/app/tasks/edit-task/edit-task.page.html
@@ -6,7 +6,7 @@
     <ion-title>Edit Task</ion-title>
     <ion-buttons slot="primary">
       <ion-button
-
+              (click)="onUpdate()"
       >
         <ion-icon name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
