--- a/src/app/due/due.page.html
+++ b/src/app/due/due.page.html
@@ -20,13 +20,13 @@
         <ion-grid>
           <ion-row>
             <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-              <ion-card *ngFor="let loadedTasks of filteredTasks" [routerLink]="[
+              <ion-card *ngFor="let loadedTasks of filteredTasks" >
+                <ion-row>
+                  <ion-col size="9" align="left" [routerLink]="[
                 '/',
                 'inbox',
                 loadedTasks.id
               ]">
-                <ion-row>
-                  <ion-col size="9" align="left">
                     <ion-card-header>
                       <ion-card-title>{{loadedTasks.title}}</ion-card-title>
                       <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
@@ -34,10 +34,10 @@
                   </ion-col>
                   <ion-col size="2" align="right">
 
-                    <ion-button >
+                    <ion-button (click)="onEdit(loadedTasks.id)" >
                       <ion-icon name="create-outline" slot="icon-only"></ion-icon>
                     </ion-button>
-                    <ion-button color="danger">
+                    <ion-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
                       <ion-icon  name="trash-outline" slot="icon-only"></ion-icon>
                     </ion-button>
                   </ion-col>
