--- a/src/app/inbox/task-detail/task-detail.page.html
+++ b/src/app/inbox/task-detail/task-detail.page.html
@@ -25,8 +25,8 @@
           <ion-input readonly="" value="{{task.dueTime}}"></ion-input>
         </ion-item>
         <ion-item>
-          <ion-label position="floating">Status:</ion-label>
-          <ion-input readonly="" value="{{task.status}}"></ion-input>
+          <ion-label position="floating">Created in:</ion-label>
+          <ion-input readonly="" value="{{task.location.address}}"></ion-input>
         </ion-item>
         <ion-item>
           <ion-label position="floating">Completed:</ion-label>
