--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -74,6 +74,9 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  --ion-tab-bar-background: #1f1f1f;
+  --ion-toolbar-background: var(--ion-color-primary);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -225,6 +228,7 @@
     --ion-tab-bar-background: #1f1f1f;
     --ion-toolbar-background: var(--ion-color-primary);
   }
+
 
   ion-title.title-large {
     --color: white;
