--- a/src/app/completed/completed.page.html
+++ b/src/app/completed/completed.page.html
@@ -1,14 +1,9 @@
-
 <ion-header>
-
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
+      <ion-menu-button color="warning"></ion-menu-button>
     </ion-buttons>
-    <ion-title>Completed</ion-title>
-    <ion-buttons slot="primary">
-
-    </ion-buttons>
+    <ion-title color="warning">Completed</ion-title>
   </ion-toolbar>
 </ion-header>
 
