--- a/src/app/due/due.page.html
+++ b/src/app/due/due.page.html
@@ -1,73 +1,74 @@
-
 <ion-header>
-
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Tasks Due</ion-title>
-    <ion-buttons slot="primary">
-
-    </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button color="warning"></ion-menu-button>
+        </ion-buttons>
+        <ion-title color="warning">Due</ion-title>
+        <ion-buttons slot="primary">
+            <ion-button routerLink="../tasks/new-task">
+                <ion-icon color="warning" name="add" slot="icon-only"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-grid>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
+    <ion-grid>
+        <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
 
-        <ion-grid>
-          <ion-row>
-            <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-              <ion-card *ngFor="let loadedTasks of filteredTasks" >
-                <ion-row>
-                  <ion-col size="9" align="left" [routerLink]="[
+                <ion-grid>
+                    <ion-row>
+                        <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+                            <ion-card *ngFor="let loadedTasks of filteredTasks">
+                                <ion-row>
+                                    <ion-col size="9" align="left" [routerLink]="[
                 '/',
                 'inbox',
                 loadedTasks.id
               ]">
-                    <ion-card-header>
-                      <ion-card-title>{{loadedTasks.title}}</ion-card-title>
-                      <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
-                    </ion-card-header>
-                  </ion-col>
-                  <ion-col size="2" align="right">
+                                        <ion-card-header>
+                                            <ion-card-title>{{loadedTasks.title}}</ion-card-title>
+                                            <ion-card-subtitle>Due
+                                                Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
+                                        </ion-card-header>
+                                    </ion-col>
+                                    <ion-col size="2" align="right">
 
-                    <ion-fab horizontal="center" vertical="center" >
-                      <ion-fab-button color="secondary">
-                        <ion-icon name="chevron-back-circle-outline"></ion-icon>
-                      </ion-fab-button>
-                      <ion-fab-list side="start">
-                        <ion-fab-button color="success">
-                          <ion-icon name="checkmark-done-outline"></ion-icon>
-                        </ion-fab-button>
-                        <ion-fab-button (click)="onEdit(loadedTasks.id)" color="warning">
-                          <ion-icon name="create-outline"></ion-icon>
-                        </ion-fab-button>
-                        <ion-fab-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
-                          <ion-icon  name="trash-outline"></ion-icon>
-                        </ion-fab-button>
-                      </ion-fab-list>
-                    </ion-fab>
+                                        <ion-fab horizontal="center" vertical="center">
+                                            <ion-fab-button color="secondary">
+                                                <ion-icon name="chevron-back-circle-outline"></ion-icon>
+                                            </ion-fab-button>
+                                            <ion-fab-list side="start">
+                                                <ion-fab-button color="success">
+                                                    <ion-icon name="checkmark-done-outline"></ion-icon>
+                                                </ion-fab-button>
+                                                <ion-fab-button (click)="onEdit(loadedTasks.id)" color="warning">
+                                                    <ion-icon name="create-outline"></ion-icon>
+                                                </ion-fab-button>
+                                                <ion-fab-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
+                                                    <ion-icon name="trash-outline"></ion-icon>
+                                                </ion-fab-button>
+                                            </ion-fab-list>
+                                        </ion-fab>
 
-                    <!--<ion-button (click)="onEdit(loadedTasks.id)" >
-                      <ion-icon name="create-outline" slot="icon-only"></ion-icon>
-                    </ion-button>
-                    <ion-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
-                      <ion-icon  name="trash-outline" slot="icon-only"></ion-icon>
-                    </ion-button>-->
-                  </ion-col>
-                </ion-row>
+                                        <!--<ion-button (click)="onEdit(loadedTasks.id)" >
+                                          <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+                                        </ion-button>
+                                        <ion-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
+                                          <ion-icon  name="trash-outline" slot="icon-only"></ion-icon>
+                                        </ion-button>-->
+                                    </ion-col>
+                                </ion-row>
 
-              </ion-card>
+                            </ion-card>
+                        </ion-col>
+                    </ion-row>
+                </ion-grid>
+
             </ion-col>
-          </ion-row>
-        </ion-grid>
-
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+        </ion-row>
+    </ion-grid>
 
 
 </ion-content>
