--- a/src/app/inbox/inbox.page.html
+++ b/src/app/inbox/inbox.page.html
@@ -1,70 +1,68 @@
-
-  <ion-header>
-
-  <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-menu-button></ion-menu-button>
-    </ion-buttons>
-    <ion-title>Inbox</ion-title>
-    <ion-buttons slot="primary">
-      <ion-button routerLink="../tasks/new-task">
-        <ion-icon name="add" slot="icon-only"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
+<ion-header>
+    <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button color="warning"></ion-menu-button>
+        </ion-buttons>
+        <ion-title color="warning">Inbox</ion-title>
+        <ion-buttons slot="primary">
+            <ion-button routerLink="../tasks/new-task">
+                <ion-icon color="warning" name="add" slot="icon-only"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
 
 
-
 <ion-content>
-  <ion-grid>
-    <ion-row no-padding>
-      <ion-col class="no-padding">
-        <ion-searchbar color="light" ></ion-searchbar>
-        <div *ngIf="isLoading" class="ion-text-center">
-          <ion-spinner color="primary"></ion-spinner>
-        </div>
-      </ion-col>
-    </ion-row>
-    <ion-row>
-      <ion-col size-sm="6" offset-sm="3">
+    <ion-grid>
+        <ion-row no-padding>
+            <ion-col class="no-padding">
+                <ion-searchbar color="light"></ion-searchbar>
+                <div *ngIf="isLoading" class="ion-text-center">
+                    <ion-spinner color="primary"></ion-spinner>
+                </div>
+            </ion-col>
+        </ion-row>
+        <ion-row>
+            <ion-col size-sm="6" offset-sm="3">
 
-         <ion-grid>
-           <ion-row>
-             <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
-               <ion-card *ngFor="let loadedTasks of loadedTasks">
+                <ion-grid>
+                    <ion-row>
+                        <ion-col size="12" size-sm="8" offset-sm="2" class="ion-text-center">
+                            <ion-card *ngFor="let loadedTasks of loadedTasks">
 
-                 <ion-row>
-                   <ion-col size="9" align="left" [routerLink]="[
-                '/',
-                'inbox',
-                loadedTasks.id
-              ]">
-                     <ion-card-header>
-                       <ion-card-title>{{loadedTasks.title}}</ion-card-title>
-                       <ion-card-subtitle>Due Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
-                     </ion-card-header>
-                   </ion-col>
-                   <ion-col size="2" align="right">
+                                <ion-row>
+                                    <ion-col size="9" align="left" [routerLink]="[
+                                                   '/',
+                                            'inbox',
+                                            loadedTasks.id
+                                          ]">
+                                        <ion-card-header>
+                                            <ion-card-title>{{loadedTasks.title}}</ion-card-title>
+                                            <ion-card-subtitle>Due
+                                                Date: {{loadedTasks.dueDate.toDateString()}}</ion-card-subtitle>
+                                        </ion-card-header>
+                                    </ion-col>
+                                    <ion-col size="2" align="right">
 
-                     <ion-button (click)="onEdit(loadedTasks.id)">
-                       <ion-icon  name="create-outline" slot="icon-only"></ion-icon>
-                     </ion-button>
-                     <ion-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
-                       <ion-icon   name="trash-outline" slot="icon-only"></ion-icon>
-                     </ion-button>
-                   </ion-col>
-                 </ion-row>
+                                        <ion-button (click)="onEdit(loadedTasks.id)">
+                                            <ion-icon name="create-outline" slot="icon-only"></ion-icon>
+                                        </ion-button>
+                                        <ion-button (click)="onDeleteTask(loadedTasks.id)" color="danger">
+                                            <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+                                        </ion-button>
+                                    </ion-col>
+                                </ion-row>
 
-               </ion-card>
-             </ion-col>
-           </ion-row>
+                            </ion-card>
+                        </ion-col>
+                    </ion-row>
 
-         </ion-grid>
+                </ion-grid>
 
-      </ion-col>
-    </ion-row>
-  </ion-grid>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
 
 
 </ion-content>
