Change the icon's colours

--- a/src/app/inbox/task-detail/task-detail.page.html
+++ b/src/app/inbox/task-detail/task-detail.page.html
@@ -1,9 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons color="warning" slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>{{task.title}}</ion-title>
+    <ion-title color="warning">{{task.title}}</ion-title>
   </ion-toolbar>
 </ion-header>
 
