--- a/src/app/tasks/edit-task/edit-task.page.html
+++ b/src/app/tasks/edit-task/edit-task.page.html
@@ -1,14 +1,15 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+    <ion-buttons color="warning" slot="start">
+      <ion-back-button color="warning" defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>Edit Task</ion-title>
+    <ion-title color="warning">Edit Task</ion-title>
     <ion-buttons slot="primary">
       <ion-button
               (click)="onUpdate()"
+
       >
-        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+        <ion-icon color="warning" name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
