--- a/src/app/tasks/new-task/new-task.page.html
+++ b/src/app/tasks/new-task/new-task.page.html
@@ -1,14 +1,14 @@
 <ion-header>
   <ion-toolbar>
-    <ion-buttons slot="start">
+    <ion-buttons color="warning" slot="start">
       <ion-back-button defaultHref="/"></ion-back-button>
     </ion-buttons>
-    <ion-title>New Offer</ion-title>
+    <ion-title color="warning">New Offer</ion-title>
     <ion-buttons slot="primary">
       <ion-button
               (click)="onCreateOffer()"
 >
-        <ion-icon name="checkmark" slot="icon-only"></ion-icon>
+        <ion-icon color="warning" name="checkmark" slot="icon-only"></ion-icon>
       </ion-button>
     </ion-buttons>
   </ion-toolbar>
