--- a/src/app/inbox/task-detail/task-detail.page.html
+++ b/src/app/inbox/task-detail/task-detail.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons color="warning" slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-back-button color="warning" defaultHref="/"></ion-back-button>
     </ion-buttons>
     <ion-title color="warning">{{task.title}}</ion-title>
   </ion-toolbar>
